--- a/buildio_pro/package.json
+++ b/buildio_pro/package.json
@@ -8,7 +8,9 @@
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "build:web": "turbo build --filter=web",
-    "start:web": "pnpm --filter=web start"
+    "build:starter-template": "turbo build --filter=starter-template",
+    "start:web": "pnpm --filter=web start",
+    "start:starter-template": "pnpm --filter=starter-template start"
   },
   "devDependencies": {
     "@workspace/eslint-config": "workspace:*",
