--- a/buildio_pro/package.json
+++ b/buildio_pro/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
+    "dev:expense-tracker": "turbo dev --filter=expense-tracker",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "build:web": "turbo build --filter=web",
