--- a/buildio_pro/apps/expense-tracker/.env.sample
+++ b/buildio_pro/apps/expense-tracker/.env.sample
@@ -1,1 +1,3 @@
-DATABASE_URL=postgresql://[user]:[password]@[host]:[port]/[database]
+DATABASE_URL=postgresql://[user]:[password]@[host]:[port]/
+
+DATABASE_NAME="[database]"
