--- a/buildio_pro/apps/expense-tracker/.env.sample
+++ b/buildio_pro/apps/expense-tracker/.env.sample
@@ -1,3 +1,1 @@
-DATABASE_URL=postgresql://[user]:[password]@[host]:[port]/
-
-DATABASE_NAME="[database]"
+DATABASE_URL="postgresql://[user]:[password]@[host]:[port]/[database]"
