--- a/buildio_pro/apps/expense-tracker/package.json
+++ b/buildio_pro/apps/expense-tracker/package.json
@@ -24,6 +24,7 @@
     "@trpc/server": "^11.6.0",
     "@trpc/tanstack-react-query": "^11.6.0",
     "@workspace/ui": "workspace:*",
+    "better-auth": "^1.3.27",
     "client-only": "^0.0.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
