--- a/buildio_pro/packages/ui/package.json
+++ b/buildio_pro/packages/ui/package.json
@@ -37,12 +37,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "country-data-list": "^1.5.5",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "libphonenumber-js": "^1.12.23",
     "lucide-react": "^0.475.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
+    "react-circle-flags": "^0.0.23",
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.64.0",
