--- a/buildio_pro/.vscode/settings.json
+++ b/buildio_pro/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "tailwindCSS.experimental.configFile": "packages/ui/src/styles/globals.css"
+  "tailwindCSS.experimental.configFile": "packages/ui/src/styles/globals.css",
+  "cSpell.words": [
+    "housie",
+    "turbopack"
+  ]
 }
