--- a/buildio_pro/apps/housie-game/package.json
+++ b/buildio_pro/apps/housie-game/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@workspace/ui": "workspace:*",
     "@workspace/starter-package": "workspace:*",
+    "@workspace/games-convex-backend":"workspace:*",
     "lucide-react": "^0.475.0",
     "next": "^15.4.5",
     "next-themes": "^0.4.6",
