--- a/buildio_pro/apps/expense-tracker/package.json
+++ b/buildio_pro/apps/expense-tracker/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
     "drizzle-zod": "^0.8.3",
+    "ioredis": "^5.8.1",
     "lucide-react": "^0.475.0",
     "motion": "^12.23.22",
     "next": "^15.4.5",
