--- a/buildio_pro/apps/vehicle-management/package.json
+++ b/buildio_pro/apps/vehicle-management/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "housie-game",
+  "name": "vehicle-management",
   "version": "0.0.1",
   "type": "module",
   "private": true,
@@ -13,7 +13,6 @@
   },
   "dependencies": {
     "@workspace/ui": "workspace:*",
-    "@workspace/games-convex-backend":"workspace:*",
     "lucide-react": "^0.475.0",
     "next": "^15.4.5",
     "next-themes": "^0.4.6",
