--- a/buildio_pro/apps/vehicle-management/package.json
+++ b/buildio_pro/apps/vehicle-management/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@workspace/ui": "workspace:*",
+    "@workspace/theme": "workspace:*",
+    "tailwindcss": "^4.1.11",
     "lucide-react": "^0.475.0",
     "next": "^15.4.5",
     "next-themes": "^0.4.6",
