✅ : poker planner home and room setup

--- a/buildio_pro/packages/games-convex-backend/package.json
+++ b/buildio_pro/packages/games-convex-backend/package.json
@@ -9,7 +9,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "convex": "^1.25.0"
+        "convex": "^1.25.0",
+        "@convex-dev/presence": "^0.2.1"
     },
     "devDependencies": {
         "typescript": "5.8.3"
