--- a/buildio_pro/packages/vehicle-management-convex/package.json
+++ b/buildio_pro/packages/vehicle-management-convex/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "convex dev",
+    "setup": "convex dev --until-success"
   },
   "keywords": [],
   "author": "",
