--- a/buildio_pro/packages/vehicle-management-convex/package.json
+++ b/buildio_pro/packages/vehicle-management-convex/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "convex dev",
+    "dev": "convex dev --until-success",
     "setup": "convex dev --until-success"
   },
   "keywords": [],
