--- a/buildio_pro/apps/expense-tracker/package.json
+++ b/buildio_pro/apps/expense-tracker/package.json
@@ -22,6 +22,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@react-email/components": "0.5.7",
     "@react-email/render": "^1.4.0",
+    "@tanstack/react-form": "^1.25.0",
     "@tanstack/react-query": "^5.90.5",
     "@trpc/client": "^11.6.0",
     "@trpc/react-query": "^11.6.0",
@@ -32,6 +33,7 @@
     "better-auth": "^1.3.28",
     "client-only": "^0.0.1",
     "drizzle-orm": "^0.44.6",
+    "drizzle-zod": "^0.8.3",
     "ioredis": "^5.8.1",
     "lucide-react": "^0.475.0",
     "next": "^15.4.5",
