--- a/buildio_pro/packages/ui/package.json
+++ b/buildio_pro/packages/ui/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-pdf/renderer": "^4.3.1",
+    "@tanstack/react-form": "^1.25.0",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
