✅ : update the package structure

--- a/buildio_pro/apps/expense-tracker/package.json
+++ b/buildio_pro/apps/expense-tracker/package.json
@@ -32,33 +32,34 @@
     "@workspace/ui": "workspace:*",
     "better-auth": "^1.3.28",
     "client-only": "^0.0.1",
+    "convex": "catalog:",
     "drizzle-orm": "^0.44.6",
     "drizzle-zod": "^0.8.3",
     "ioredis": "^5.8.1",
-    "lucide-react": "^0.475.0",
-    "next": "^15.4.5",
-    "next-themes": "^0.4.6",
+    "lucide-react": "catalog:",
+    "next": "catalog:",
+    "next-themes": "catalog:",
     "pg": "^8.16.3",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "catalog:react19",
+    "react-dom": "catalog:react19",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
     "resend": "^6.2.2",
     "server-only": "^0.0.1",
-    "sonner": "^2.0.7",
+    "sonner": "catalog:",
     "superjson": "^2.2.2",
     "zod": "^4.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.19.9",
+    "@types/node": "catalog:",
     "@types/pg": "^8.15.5",
-    "@types/react": "^19.1.9",
-    "@types/react-dom": "^19.1.7",
+    "@types/react": "catalog:react19",
+    "@types/react-dom": "catalog:react19",
     "@workspace/eslint-config": "workspace:^",
     "@workspace/typescript-config": "workspace:*",
     "drizzle-kit": "^0.31.5",
     "react-email": "4.3.2",
-    "tailwindcss": "^4.1.11",
-    "typescript": "^5.9.2"
+    "tailwindcss": "catalog:",
+    "typescript": "catalog:"
   }
 }
