--- a/buildio_pro/packages/games-convex-backend/package.json
+++ b/buildio_pro/packages/games-convex-backend/package.json
@@ -9,10 +9,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "convex": "^1.25.0",
+        "convex": "catalog:",
         "@convex-dev/presence": "^0.2.1"
     },
     "devDependencies": {
-        "typescript": "^5.9.2"
+        "typescript": "catalog:"
     }
 }
