--- a/buildio_pro/apps/poker-planner/package.json
+++ b/buildio_pro/apps/poker-planner/package.json
@@ -17,24 +17,24 @@
     "@workspace/games-convex-backend": "workspace:*",
     "@workspace/theme": "workspace:*",
     "@workspace/ui": "workspace:*",
-    "convex": "^1.27.5",
-    "lucide-react": "^0.539.0",
-    "next": "^15.4.5",
-    "next-themes": "^0.4.6",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "convex": "catalog:",
+    "lucide-react": "catalog:",
+    "next": "catalog:",
+    "next-themes": "catalog:",
+    "react": "catalog:react19",
+    "react-dom": "catalog:react19",
     "react-hook-form": "^7.64.0",
     "recharts": "2.15.4",
-    "sonner": "^2.0.7",
-    "tailwindcss": "^4.1.11",
+    "sonner": "catalog:",
+    "tailwindcss": "catalog:",
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/node": "^20.19.9",
-    "@types/react": "^19.1.9",
-    "@types/react-dom": "^19.1.7",
+    "@types/node": "catalog:",
+    "@types/react": "catalog:react19",
+    "@types/react-dom": "catalog:react19",
     "@workspace/eslint-config": "workspace:^",
     "@workspace/typescript-config": "workspace:*",
-    "typescript": "^5.9.2"
+    "typescript": "catalog:"
   }
 }
