--- a/buildio_pro/packages/theme/package.json
+++ b/buildio_pro/packages/theme/package.json
@@ -10,6 +10,6 @@
   "author": "goncy",
   "license": "ISC",
   "dependencies": {
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "catalog:"
   }
 }
