--- a/buildio_pro/pnpm-workspace.yaml
+++ b/buildio_pro/pnpm-workspace.yaml
@@ -1,3 +1,21 @@
 packages:
   - "apps/*"
   - "packages/*"
+
+catalog:
+  convex: ^1.27.5
+  next: ^15.4.5
+  typescript: ^5.9.2
+  lucide-react: ^0.539.0
+  '@types/node': ^20.19.9
+  next-themes: ^0.4.6
+  sonner: ^2.0.7
+  tailwindcss: ^4.1.11
+  zod: ^3.25.76
+
+catalogs:
+  react19:
+    react: ^19.1.1
+    react-dom: ^19.1.1
+    '@types/react': ^19.1.9
+    '@types/react-dom': ^19.1.7
