✅: user registration scribble

--- a/buildio_pro/apps/scribble/package.json
+++ b/buildio_pro/apps/scribble/package.json
@@ -12,14 +12,18 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@workspace/games-convex-backend": "workspace:*",
     "@workspace/ui": "workspace:*",
-    "@workspace/games-convex-backend":"workspace:*",
     "convex": "catalog:",
     "lucide-react": "catalog:",
     "next": "catalog:",
     "next-themes": "catalog:",
     "react": "catalog:react19",
-    "react-dom": "catalog:react19"
+    "react-dom": "catalog:react19",
+    "react-hook-form": "^7.67.0",
+    "sonner": "catalog:",
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@types/node": "catalog:",
