✅ : added konva canvas

--- a/buildio_pro/apps/scribble/package.json
+++ b/buildio_pro/apps/scribble/package.json
@@ -18,12 +18,14 @@
     "@workspace/theme": "workspace:*",
     "@workspace/ui": "workspace:*",
     "convex": "catalog:",
+    "konva": "^10.0.12",
     "lucide-react": "catalog:",
     "next": "catalog:",
     "next-themes": "catalog:",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
     "react-hook-form": "^7.67.0",
+    "react-konva": "^19.2.1",
     "sonner": "catalog:",
     "zod": "catalog:"
   },
