updated the main div in scribble

--- a/buildio_pro/.vscode/settings.json
+++ b/buildio_pro/.vscode/settings.json
@@ -6,5 +6,5 @@
     "pincode",
     "turbopack"
   ],
-  "typescript.tsdk": "node_modules\\typescript\\lib"
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
