--- a/buildio_pro/package.json
+++ b/buildio_pro/package.json
@@ -21,7 +21,10 @@
     "start:poker-planner": "pnpm --filter=poker-planner start",
     "start:housie-game": "pnpm --filter=housie-game start",
     "start:scribble": "pnpm --filter=scribble start",
-    "start:expense-tracker": "pnpm --filter=expense-tracker start"
+    "start:expense-tracker": "pnpm --filter=expense-tracker start",
+    "clean": "git clean -xdf node_modules",
+    "clean:workspaces": "turbo run clean",
+    "clean:all": "turbo run clean && git clean -xdf node_modules"
   },
   "devDependencies": {
     "@workspace/eslint-config": "workspace:*",
