--- a/buildio_pro/packages/eslint-config/package.json
+++ b/buildio_pro/packages/eslint-config/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "type": "module",
   "private": true,
+  "scripts": {
+    "clean": "git clean -xdf .cache .turbo node_modules"
+  },
   "exports": {
     "./base": "./base.js",
     "./next-js": "./next.js",
