--- a/buildio_pro/turbo.json
+++ b/buildio_pro/turbo.json
@@ -33,6 +33,12 @@
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "clean": {
+      "cache": false
+    },
+    "//#clean": {
+      "cache": false
     }
   },
   "globalEnv": [
