--- a/buildio_pro/apps/poker-planner/package.json
+++ b/buildio_pro/apps/poker-planner/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "clean": "git clean -xdf .cache .next .turbo node_modules"
   },
   "dependencies": {
     "@convex-dev/presence": "^0.2.1",
