--- a/buildio_pro/packages/theme/package.json
+++ b/buildio_pro/packages/theme/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "git clean -xdf .cache .turbo node_modules"
   },
   "keywords": [],
   "author": "goncy",
