--- a/buildio_pro/packages/ui/package.json
+++ b/buildio_pro/packages/ui/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "lint": "eslint . --max-warnings 0"
+    "lint": "eslint . --max-warnings 0",
+    "clean": "git clean -xdf .cache .turbo dist node_modules"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
