✅ : update the next js versions

--- a/buildio_pro/apps/expense-tracker/package.json
+++ b/buildio_pro/apps/expense-tracker/package.json
@@ -38,7 +38,7 @@
     "drizzle-zod": "^0.8.3",
     "ioredis": "^5.8.1",
     "lucide-react": "catalog:",
-    "next": "catalog:",
+    "next": "15.5.9",
     "next-themes": "catalog:",
     "pg": "^8.16.3",
     "react": "catalog:react19",
