--- a/buildio_pro/apps/scribble/package.json
+++ b/buildio_pro/apps/scribble/package.json
@@ -21,7 +21,7 @@
     "convex": "catalog:",
     "konva": "^10.0.12",
     "lucide-react": "catalog:",
-    "next": "catalog:",
+    "next": "15.5.9",
     "next-themes": "catalog:",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
