--- a/buildio_pro/apps/web/package.json
+++ b/buildio_pro/apps/web/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@workspace/ui": "workspace:*",
     "lucide-react": "catalog:",
-    "next": "catalog:",
+    "next": "15.5.9",
     "next-themes": "catalog:",
     "react": "catalog:react19",
     "react-dom": "catalog:react19"
