--- a/buildio_pro/pnpm-workspace.yaml
+++ b/buildio_pro/pnpm-workspace.yaml
@@ -6,7 +6,7 @@ catalog:
   '@types/node': ^20.19.9
   convex: ^1.27.5
   lucide-react: ^0.539.0
-  next: ^15.4.8
+  next: '15.5.9'
   next-themes: ^0.4.6
   sonner: 2.0.7
   tailwindcss: ^4.1.11
@@ -17,5 +17,5 @@ catalogs:
   react19:
     '@types/react': ^19.1.9
     '@types/react-dom': ^19.1.7
-    react: ^19.1.2
-    react-dom: ^19.1.2
+    react: ^19.2.3
+    react-dom: ^19.2.3
