--- a/buildio_pro/pnpm-workspace.yaml
+++ b/buildio_pro/pnpm-workspace.yaml
@@ -6,7 +6,7 @@ catalog:
   '@types/node': ^20.19.9
   convex: ^1.27.5
   lucide-react: ^0.539.0
-  next: '15.5.9'
+  next: 15.5.9
   next-themes: ^0.4.6
   sonner: 2.0.7
   tailwindcss: ^4.1.11
@@ -19,3 +19,12 @@ catalogs:
     '@types/react-dom': ^19.1.7
     react: ^19.2.3
     react-dom: ^19.2.3
+
+overrides:
+  '@trpc/server@>=11.0.0 <11.8.0': '>=11.8.0'
+  better-auth@<1.4.2: '>=1.4.2'
+  better-auth@<1.4.5: '>=1.4.5'
+  esbuild@<=0.24.2: '>=0.25.0'
+  glob@>=11.0.0 <11.1.0: '>=11.1.0'
+  js-yaml@>=4.0.0 <4.1.1: '>=4.1.1'
+  tmp@<=0.2.3: '>=0.2.4'
