--- a/buildio_pro/apps/expense-tracker/package.json
+++ b/buildio_pro/apps/expense-tracker/package.json
@@ -34,6 +34,7 @@
     "better-auth": "^1.4.9",
     "client-only": "^0.0.1",
     "convex": "catalog:",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.7",
     "drizzle-zod": "^0.8.3",
     "ioredis": "^5.8.2",
