--- a/buildio_pro/apps/expense-tracker/package.json
+++ b/buildio_pro/apps/expense-tracker/package.json
@@ -46,6 +46,7 @@
     "react-dom": "catalog:react19",
     "react-hook-form": "^7.69.0",
     "react-icons": "^5.5.0",
+    "recharts": "2.15.4",
     "resend": "^6.6.0",
     "server-only": "^0.0.1",
     "sonner": "catalog:",
