--- a/buildio_pro/apps/expense-tracker/package.json
+++ b/buildio_pro/apps/expense-tracker/package.json
@@ -25,6 +25,7 @@
     "@react-email/render": "^1.4.0",
     "@tanstack/react-form": "^1.27.6",
     "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-query-devtools": "^5.91.1",
     "@trpc/client": "^11.8.1",
     "@trpc/react-query": "^11.8.1",
     "@trpc/server": "^11.8.1",
