--- a/buildio_pro/packages/ui/components.json
+++ b/buildio_pro/packages/ui/components.json
@@ -18,6 +18,7 @@
     "hooks": "@workspace/ui/hooks"
   },
   "registries": {
-    "@shadcnblocks": "https://shadcnblocks.com/r/{name}.json"
+    "@shadcnblocks": "https://shadcnblocks.com/r/{name}.json",
+    "@diceui": "https://diceui.com/r/{name}.json"
   }
 }
