--- a/buildio_pro/packages/ui/package.json
+++ b/buildio_pro/packages/ui/package.json
@@ -8,6 +8,10 @@
     "clean": "git clean -xdf .cache .turbo dist node_modules"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -48,7 +52,10 @@
     "input-otp": "^1.4.2",
     "libphonenumber-js": "^1.12.33",
     "lucide-react": "catalog:",
+    "motion": "^12.23.26",
+    "nanoid": "^5.1.6",
     "next-themes": "catalog:",
+    "nuqs": "^2.8.6",
     "react": "catalog:react19",
     "react-circle-flags": "^0.0.23",
     "react-day-picker": "^9.13.0",
