--- a/buildio_pro/pnpm-workspace.yaml
+++ b/buildio_pro/pnpm-workspace.yaml
@@ -5,7 +5,7 @@ packages:
 catalog:
   '@types/node': ^20.19.27
   convex: ^1.31.2
-  lucide-react: ^0.539.0
+  lucide-react: 0.539.0
   next: 15.5.9
   next-themes: ^0.4.6
   sonner: 2.0.7
